# ChangeLog for net-zope/plone
# Copyright 2003-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/Attic/ChangeLog,v 1.38 2006/06/19 19:00:03 radek Exp $

  19 Jun 2006; Radoslaw Stachowiak <radek@gentoo.org>
  files/digest-plone-2.5, Manifest:
  due to plone.org guys uploading new file with the same version, md5s changed

*plone-2.5 (19 Jun 2006)

  19 Jun 2006; Radoslaw Stachowiak <radek@gentoo.org> +plone-2.5.ebuild:
  version bump

*plone-2.5_rc3 (16 Jun 2006)

  16 Jun 2006; Radoslaw Stachowiak <radek@gentoo.org>
  -plone-2.1.3_rc1.ebuild, -plone-2.5_beta2.ebuild, +plone-2.5_rc3.ebuild:
  version bump, and removal of temporary ebuilds

*plone-2.5_rc1 (03 Jun 2006)

  03 Jun 2006; Radoslaw Stachowiak <radek@gentoo.org> +plone-2.5_rc1.ebuild:
  version bump

*plone-2.1.3 (03 Jun 2006)

  03 Jun 2006; Radoslaw Stachowiak <radek@gentoo.org> +plone-2.1.3.ebuild:
  Plone 2.1.3 bundled release

*plone-2.5_beta2 (28 May 2006)
*plone-2.1.3_rc1 (28 May 2006)

  28 May 2006; Radoslaw Stachowiak <radek@gentoo.org>
  +plone-2.1.3_rc1.ebuild, +plone-2.5_beta2.ebuild:
  Major upgrade in plone handling, introduced two new versions, changed model
  to bundled one, removed ~alpha support. Please visit #105187 for more info

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-plone-1.0.5,
  files/digest-plone-1.0.6, files/digest-plone-2.0,
  files/digest-plone-2.0.4, files/digest-plone-2.0.5,
  files/digest-plone-2.0.5-r1, Manifest:
  Fixing SHA256 digest, pass four

  17 Apr 2006; Mark Loeser <halcy0n@gentoo.org> plone-2.0.5-r2.ebuild:
  Stable on x86; bug #129705

  17 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  plone-2.0.5-r2.ebuild:
  ppc stable, bug #129705

  17 Apr 2006; Radoslaw Stachowiak <radek@gentoo.org>
  files/plone-2.0.5-portrait_security.patch:
  Corrected plone-2.0.5-r2 patch

*plone-2.0.5-r2 (16 Apr 2006)

  16 Apr 2006; Radoslaw Stachowiak <radek@gentoo.org>