@@ -1,0 +1,3 @@
+MD5 0b938c37102137daa086b51f140e4322 Plone-2.1.4.tar.gz 7549024
+RMD160 1d61cb840e15c5657d8f80a814ad6654cb3ae83b Plone-2.1.4.tar.gz 7549024
+SHA256 9409dc2d6fe13eb05aa991420173e2be632eb5862f98312e7449efe74dec9764 Plone-2.1.4.tar.gz 7549024
