@@ -1,0 +1,3 @@
+MD5 9efe3dc1735f13307b5b05444fb7c562 Plone-2.5.1-rc1.tar.gz 8387144
+RMD160 14506104685e6a5bfb8a835daad86176af555c1b Plone-2.5.1-rc1.tar.gz 8387144
+SHA256 6dd68147e6343a80eb4392bfe1e7b78d992bcfe765153d25f45316b4985b1958 Plone-2.5.1-rc1.tar.gz 8387144
