@@ -1,6 +1,13 @@
 # ChangeLog for net-zope/plone
 # Copyright 2003-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/Attic/ChangeLog,v 1.38 2006/06/19 19:00:03 radek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/Attic/ChangeLog,v 1.39 2006/09/24 20:04:39 radek Exp $
+
+*plone-2.5.1_rc1 (24 Sep 2006)
+*plone-2.1.4 (24 Sep 2006)
+
+  24 Sep 2006; Radoslaw Stachowiak <radek@gentoo.org> +plone-2.1.4.ebuild,
+  -plone-2.5_rc1.ebuild, -plone-2.5_rc3.ebuild, +plone-2.5.1_rc1.ebuild:
+  Version bump, and category cleaning, thanks to Janne Pikkarainen
 
   19 Jun 2006; Radoslaw Stachowiak <radek@gentoo.org>
   files/digest-plone-2.5, Manifest:
